working on mobile scroll issue

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,9 @@
-body, * {
+body {
   color: #353535 !important;
+  /* height: 100%; */
 }
 
-/*
+
 .header {
   background: -moz-linear-gradient(top, rgba(250, 250, 246, 1) 0%, rgba(250, 250, 246, 1) 1%, rgba(250, 250, 246, 1) 70%, rgba(250, 250, 246, 0) 100%);
   background: -webkit-linear-gradient(top, rgba(250, 250, 246, 1) 0%, rgba(250, 250, 246, 1) 1%, rgba(250, 250, 246, 1) 70%, rgba(250, 250, 246, 0) 100%);
@@ -14,10 +15,10 @@ body, * {
   margin-left: -8px;
   margin-top: -40px;
 }
-*/
+
 
 header {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .container {
@@ -26,7 +27,9 @@ header {
   height: 100%;
   margin: auto;
   text-align: center;
-  overflow-y: scroll !important;
+  overflow: hidden;
+  overflow-y: scroll;
+  /* display: block; */
 }
 
 .info {
@@ -54,18 +57,22 @@ h1 {
   font-family: 'VT323', serif;
   font-weight: lighter;
   font-size: 130px;
-  letter-spacing: -7.4px;
+  /* letter-spacing: -7.4px; */
   text-align: center;
   text-transform: uppercase;
   padding: 20px;
   padding-top: 0px;
-  color: #ffffff;
+  color: #353535;
   margin-block-end: 0px;
   margin-block-start: 0px;
-  height: 110px;
+  height: 30px;
   color: transparent !important;
   -webkit-text-stroke-width: 1.4px;
   -webkit-text-stroke-color: black;
+}
+
+h1 span {
+  color: #353535 !important;
 }
 
 .nav-parent {
@@ -78,7 +85,7 @@ h2 {
   font-family: 'Overpass Mono', serif;
   font-size: 30px;
   letter-spacing: -2.5px;
-  color: #ffffff;
+  color: #353535;
   padding: 10px 0px 0px;
   width: 100%;
   font-weight: bold;
@@ -95,7 +102,7 @@ h3 {
   line-height: 1.2;
   letter-spacing: -1px;
   text-align: left;
-  color: #fff;
+  color: #353535;
   padding: 5px;
 }
 
@@ -104,7 +111,7 @@ p {
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: 0.2px;
-  color: #ffffff;
+  color: #353535;
   text-align: left;
   padding: 5px;
 }
@@ -127,7 +134,6 @@ button:focus {
   border-bottom: solid 1px #605360;
   opacity: 1;
   transition: opacity 1s;
-  overflow-y: scroll;
 }
 
 .articlerow:last-child {
@@ -163,12 +169,13 @@ button:focus {
   width: 100%;
   margin: 0 auto;
   text-align: center;
+  margin-bottom: 100px;
 }
 
 input#searchInput {
   background: transparent;
   /* border-bottom: 1px solid black; */
-  color: white;
+  color: #353535;
   font-family: 'Overpass Mono';
   font-size: 15px;
   outline: none;
@@ -179,9 +186,8 @@ input#searchInput {
   border-top: none;
   border-left: none;
   border-right: none;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   width: 40%;
-
 }
 input#searchInput:focus {
     border-bottom: 2px solid #52e268;
@@ -192,13 +198,15 @@ input#searchInput:focus {
   padding: 10px;
   text-align: center;
   margin-left: -14px;
+  padding-top: 40px;
+  padding-bottom: 0px;
 }
 
 span.individual-search-val {
   border: 1px solid black;
   padding: 6px;
   border-radius: 20px;
-  color: white;
+  color: #353535;
   display: inline-flex;
   line-height: 20px;
   margin: 4px;
@@ -272,7 +280,7 @@ input[type="search"] {
   font-weight: bold;
   letter-spacing: 0.2px;
   text-align: left;
-  color: #ffffff;
+  color: #353535;
   padding: 10px 0px 4px;
   margin-bottom: 0px;
 }
@@ -286,8 +294,7 @@ input[type="search"] {
 
 @media (max-width: 1200px) {
 
-  header h1:nth-child(1) {
-      margin-block-end: -90px;
+  header #pageTitle:nth-child(1) {
       letter-spacing: -0.4px;
   }
 
@@ -325,6 +332,16 @@ input[type="search"] {
 }
 
 @media (max-width: 480px) {
+
+  #pastQueries {
+    padding-bottom: 80px;
+}
+
+  h1 {
+    height: 30px;
+    letter-spacing: 0.6px;
+  }
+
   .img-cont {
     flex-direction: column;
   }
@@ -336,6 +353,7 @@ input[type="search"] {
 
   button {
     margin-top: 10px;
+    font-size: 12px;
   }
 }
 
@@ -351,6 +369,9 @@ input[type="search"] {
 }
 
 @media (min-width: 1200px) {
+  #pageTitle {
+    height: 110px !important;
+  }
   .menu-container {
     display: none;
   }
@@ -365,6 +386,7 @@ input[type="search"] {
   }
   #searchInput {
     margin-left: 50px;
+    -webkit-border-radius: 0;
   }
 }
 
